<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="3"
    tools:context=".MainActivity">

  <EditText
      android:id="@+id/power_name"
      style="@style/LargeText"
      android:layout_columnSpan="3"
      android:layout_rowSpan="1"
      android:hint="@string/powers_name"
      android:inputType="text"/>

  <Spinner
      android:id="@+id/power_action_type"
      android:layout_columnSpan="3"
      android:layout_rowSpan="1"
      android:text="@string/powers_action_type"/>

  <EditText
      android:id="@+id/power_weapon_type"
      style="@style/LargeText"
      android:layout_columnSpan="3"
      android:layout_rowSpan="1"
      android:hint="@string/powers_weapon_type"/>

  <EditText
      android:id="@+id/power_target"
      style="@style/LargeText"
      android:layout_columnSpan="3"
      android:layout_rowSpan="1"
      android:hint="@string/powers_target"/>

  <Spinner
      android:id="@+id/power_your_stat"
      android:layout_columnSpan="1"
      android:layout_rowSpan="1"
      android:text="@string/powers_your_stat"/>

  <TextView
      android:id="@+id/power_vs_text"
      android:layout_columnSpan="1"
      android:layout_rowSpan="1"
      android:text="@string/powers_vs"/>

  <Spinner
      android:id="@+id/power_their_stat"
      android:layout_columnSpan="1"
      android:layout_rowSpan="1"
      android:text="@string/powers_their_stat"/>

  <EditText
      android:id="@+id/editText"
      style="@style/LargeText"
      android:layout_columnSpan="3"
      android:layout_rowSpan="1"
      android:hint="@string/powers_hit"/>

  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/powers_save"
      android:id="@+id/button"
      android:layout_column="0"/>

</GridLayout>